--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -12,16 +12,20 @@ nav {
 .logo {
   display: inline-block;
   margin: inherit;
+  font-size: 3rem;
 }
 
 .nav-links {
   list-style: none;
   display: flex;
+  font-size: 1.5rem;
+  text-decoration: none;
 }
 
 .tab a {
   padding: 0.7em;
   color: white;
+  text-decoration: none;
 } 
 
 .tab a:hover {
