--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,7 +1,9 @@
 body .Dashboard {
 	background-color: #6927d8;
 	margin-bottom: -100px;
-	padding-bottom: 200px;
+	padding-bottom: 244px;
+	/* height: 100vh; */
+	padding-top: 100px;
 }
 *:focus{
 	outline: none !important;
@@ -13,7 +15,7 @@ body .Dashboard {
 	box-shadow: 0px 0px 100px rgba(0,0,0,0.2);
 	margin: auto;
 	background-color: white;;
-	margin-top: 100px;
+	margin-top: 150px;
 	border: white;
     border-radius: 20px;
 }
