--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: "Roboto", "Oxygen",
@@ -7,9 +8,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
       align-items: center;
       padding: 0;
+      /* overflow: hidden; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+  font-family: "Lato",'Helvetica Neue',"Arial,Helvetica","sans-serif";
 }
